added hover and cursor in css

--- a/src/component/Logo.scss
+++ b/src/component/Logo.scss
@@ -15,9 +15,13 @@
     }
     p {
       color: white;
+      cursor: pointer;
     }
     .p-ipad {
       color: black;
+    }
+    p:hover {
+      color: lightblue;
     }
   }
 }
